fix(Row): should allow flex wrap

--- a/src/row/index.less
+++ b/src/row/index.less
@@ -2,6 +2,7 @@
 
 .van-row {
   display: flex;
+  flex-wrap: wrap;
 
   &--justify-center {
     justify-content: center;
